--- a/docs/app/styles/_themes.scss
+++ b/docs/app/styles/_themes.scss
@@ -37,7 +37,7 @@ $nb-themes: nb-register-theme((
   page-title-padding-top: 0.25rem,//custom variable
   second-heading-font-size: 1.5rem,//custom variable
   second-heading-font-weight: font-weight-normal,//custom variable
-  block-margin: 1.5rem,//custom variable
+  block-margin: 2rem,//custom variable
   block-title-margin-bottom: 1rem,//custom variable
   block-title-font-size: 1.25rem,//custom variable
   block-title-font-weight: font-weight-normal,//custom variable
