--- a/docs/app/styles/styles.scss
+++ b/docs/app/styles/styles.scss
@@ -9,9 +9,6 @@
       display: block !important; //to fix ie header-footer issue;
     }
   }
-  p {
-    margin: 0;
-  }
   pre {
     margin: 0.5rem 0;
   }
